--- a/exercise_1.ipynb
+++ b/exercise_1.ipynb
@@ -12,7 +12,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercise 1.1 The interpreter"
+    "# 1 Basics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1.1 The interpreter"
    ]
   },
   {
@@ -34,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercise 1.2: Scripts"
+    "## Exercise 1.2: Scripts"
    ]
   },
   {
@@ -48,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercise 1.3: More interpreter"
+    "## Exercise 1.3: More interpreter"
    ]
   },
   {
@@ -76,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercise 1.4: Booleans"
+    "## Exercise 1.4: Booleans"
    ]
   },
   {
@@ -104,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercise 1.5: Integers"
+    "## Exercise 1.5: Integers"
    ]
   },
   {
@@ -128,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercise 1.6: Floats"
+    "## Exercise 1.6: Floats"
    ]
   },
   {
@@ -146,12 +153,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercise 1.7: Variables"
+    "## Exercise 1.7: Variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercise 1.8: Type casting"
+    "## Exercise 1.8: Type casting"
    ]
   },
   {
@@ -199,6 +206,285 @@
     "j) The result will be False because any number that is not 0 whether it is int or float will be True but 0 will be False.\n",
     "\n",
     "k) The result will be True because of the reason I explained in previous answer that any number rather than 0 will be true."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2 Control flow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2.1: Range"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "range(5) returns a list of elements which starts with 0 and stops at specified number which is not included.\n",
+    "And for i in range(5) means we want to repeat block of code for a specific number of times starting from one number until reaching the other. In this case starting from 0 to 4 not including 5.\n",
+    "\n",
+    "When I typed type(range(5)), it returns range object which holds start, stop and step values and it produces numbers one by one as the loop moves to the next iteration."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2.2: For loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (a) Print the numbers 0 to 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(100):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (b) Print the numbers 0 to 100 that are divisible by 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(100):\n",
+    "    if i % 7 == 0:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (c) Print the numbers 1 to 100 that are divisible by 5 but not by 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(100):\n",
+    "    if (i % 5 ==  0) & (i % 3 != 0):\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (d) Print for each of the numbers x = 2, . . . 20, all numbers that divide x, excluding 1 and x. Hence, for 18, it should print 2 3 6 9."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(2,21):\n",
+    "    print(f'{i}: ', end='')\n",
+    "    for j in range(2,21):\n",
+    "        if (i % j == 0) & (i != j):\n",
+    "            print(j, end =',')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2.3: Simple while loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (a) Print the numbers 0 to 100\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "while i < 100:\n",
+    "    print(i, end=' ')    \n",
+    "    i = i + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (b) Print the numbers 0 to 100 that are divisible by 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "while i < 100:\n",
+    "    if i % 7 == 0:\n",
+    "        print(i , end=' ')\n",
+    "    i = i + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2.4: Hangman update 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2.5: While loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use a while loop to find the first 20 numbers that are divisible by 5, 7 and 11, and print them Hint: store the number found so far in a variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "385 770 1155 1540 1925 2310 2695 3080 3465 3850 4235 4620 5005 5390 5775 6160 6545 6930 7315 7700 "
+     ]
+    }
+   ],
+   "source": [
+    "number_found = 0\n",
+    "x = 11\n",
+    "\n",
+    "while number_found < 20:\n",
+    "    if (x % 5 == 0) & (x % 7 == 0) & (x % 11 == 0):\n",
+    "        print(x, end = ' ')\n",
+    "        number_found = number_found + 1\n",
+    "    x = x + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2.6: More while loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The smallest number that is divisible by 2, 3 and 4 is 12. Find the smallest number that is divisible by all integers between 1 and 10."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = 1\n",
+    "x = True\n",
+    "i = 0\n",
+    "dividends = [j+1 for j in range(10)]\n",
+    "\n",
+    "while x:\n",
+    "    if num % dividends[i] == 0 :\n",
+    "        if i != 9:\n",
+    "            i = i +1\n",
+    "        else:\n",
+    "            x = False\n",
+    "    else:\n",
+    "        num = num + 1\n",
+    "        i = 0\n",
+    "\n",
+    "print(f'The number is {num}!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2.7: Collatz sequence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A Collatz sequence is formed as follows: We start with some number x_0, and we find the next number in the sequence by\n",
+    "                   {x_(i)/2, if x_(i) is even \n",
+    "        x_(i+1) = {\n",
+    "                   {3x_(i)+1, ifx_(i) isodd\n",
+    "If xi = 1, we stop iterating and have found the full sequence.\n",
+    "For example, if we start with x_0 = 5, we obtain the sequence:\n",
+    "5 16 8 4 2 1\n",
+    "It is conjectured, though not proven, that every chain eventually ends at 1.\n",
+    "Print the Collatz sequence starting at x0 = 103."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 103\n",
+    "while x > 1:\n",
+    "    print(x, end = \" \")\n",
+    "    if x % 2 == 0:\n",
+    "        x = int(x / 2)\n",
+    "    else:\n",
+    "        x = 3 * x +1\n",
+    "print(x)"
    ]
   }
  ],
