--- a/exercise_2.ipynb
+++ b/exercise_2.ipynb
@@ -1296,14 +1296,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i get up at night \n"
+      "the birds still hopping on the street. \n"
      ]
     }
    ],
@@ -1340,7 +1340,8 @@
     "    for i in range(len(line_list)):\n",
     "        if i == 0:\n",
     "            result.append(('BEGIN',line_list[i]))\n",
-    "            result.append((line_list[i],line_list[i+1]))\n",
+    "            if len(line_list) != 1:\n",
+    "                    result.append((line_list[i],line_list[i+1]))\n",
     "        elif i == (len(line_list) - 1):\n",
     "            result.append((line_list[i],'END'))\n",
     "        else:\n",
